--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - main
       - master
-  pull_request:
-    branches:
-      - main
-      - master
-
 jobs:
   ci:
     runs-on: ${{ matrix.os }}
@@ -51,4 +46,9 @@ jobs:
       - name: Generate page
         run: yarn generate
 
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
 
